fix: slider behind navbar, padding fixed

--- a/nginx/src/css/sidebar.css
+++ b/nginx/src/css/sidebar.css
@@ -12,6 +12,7 @@
 	transition: 300ms ease-in-out;
 	overflow: hidden;
 	text-wrap: nowrap;
+	z-index: 9001;
 }
 
 /* Sidebar Closed State */
