--- a/nginx/src/css/styles.css
+++ b/nginx/src/css/styles.css
@@ -61,7 +61,7 @@ body {
 
 #main-content {
 	flex-grow: 1;
-	padding: 20px;
 	background-color: white;
 	overflow-y: auto;
+	display: flex;
 }
